// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateAudioPage > snapshot — both components 1`] = `
"'use client'

// Generated by ai-wingman — edit freely, you own this file.
// Transcribe: record audio → send base64 to /api/audio/transcribe → display text
// Speech:     type text → send to /api/audio/speech → play the returned audio

import { useRef, useState } from 'react'
import { Button } from '@/components/ui/button'
import { Input } from '@/components/ui/input'

const TRANSCRIBE_PATH = '/api/audio/transcribe'
const SPEECH_PATH = '/api/audio/speech'

export default function AudioPage() {
  const [transcript, setTranscript] = useState('')
  const [recording, setRecording] = useState(false)
  const mediaRef = useRef<MediaRecorder | null>(null)
  const chunksRef = useRef<BlobPart[]>([])
  const [ttsText, setTtsText] = useState('')
  const [playing, setPlaying] = useState(false)

  async function startRecording() {
    const stream = await navigator.mediaDevices.getUserMedia({ audio: true })
    const recorder = new MediaRecorder(stream)
    chunksRef.current = []
    recorder.ondataavailable = (e) => chunksRef.current.push(e.data)
    recorder.onstop = async () => {
      const blob = new Blob(chunksRef.current, { type: 'audio/webm' })
      const base64 = await blobToBase64(blob)
      const res = await fetch(TRANSCRIBE_PATH, {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({ audio: base64, mimeType: 'audio/webm' }),
      })
      const data = await res.json() as { text: string }
      setTranscript(data.text)
      stream.getTracks().forEach((t) => t.stop())
    }
    recorder.start()
    mediaRef.current = recorder
    setRecording(true)
  }

  function stopRecording() {
    mediaRef.current?.stop()
    setRecording(false)
  }

  function blobToBase64(blob: Blob): Promise<string> {
    return new Promise((resolve, reject) => {
      const reader = new FileReader()
      reader.onload = () => {
        const dataUrl = reader.result as string
        // strip the data:...;base64, prefix
        resolve(dataUrl.split(',')[1] ?? '')
      }
      reader.onerror = reject
      reader.readAsDataURL(blob)
    })
  }

  async function speak() {
    if (!ttsText.trim()) return
    setPlaying(true)
    try {
      const res = await fetch(SPEECH_PATH, {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({ text: ttsText }),
      })
      const arrayBuffer = await res.arrayBuffer()
      const audioCtx = new AudioContext()
      const audioBuffer = await audioCtx.decodeAudioData(arrayBuffer)
      const source = audioCtx.createBufferSource()
      source.buffer = audioBuffer
      source.connect(audioCtx.destination)
      source.onended = () => setPlaying(false)
      source.start()
    } catch {
      setPlaying(false)
    }
  }

  return (
    <div className="max-w-lg mx-auto p-8 flex flex-col gap-8">
      <h1 className="text-2xl font-semibold">Audio</h1>

      {/* Transcription */}
      <section className="flex flex-col gap-3">
        <h2 className="text-lg font-medium">Speech → Text</h2>
        <Button
          onClick={recording ? stopRecording : startRecording}
          variant={recording ? 'destructive' : 'default'}
        >
          {recording ? 'Stop recording' : 'Start recording'}
        </Button>
        {transcript && (
          <p className="rounded border p-3 text-sm whitespace-pre-wrap">{transcript}</p>
        )}
      </section>

      {/* Text-to-speech */}
      <section className="flex flex-col gap-3">
        <h2 className="text-lg font-medium">Text → Speech</h2>
        <div className="flex gap-2">
          <Input
            value={ttsText}
            onChange={(e) => setTtsText(e.target.value)}
            placeholder="Enter text to speak..."
            onKeyDown={(e) => { if (e.key === 'Enter') void speak() }}
          />
          <Button onClick={() => void speak()} disabled={playing || !ttsText.trim()}>
            {playing ? 'Playing…' : 'Speak'}
          </Button>
        </div>
      </section>
    </div>
  )
}
"
`;

exports[`generateAudioPage > snapshot — speech only 1`] = `
"'use client'

// Generated by ai-wingman — edit freely, you own this file.
// Transcribe: record audio → send base64 to /api/audio/transcribe → display text
// Speech:     type text → send to /api/audio/speech → play the returned audio

import { useRef, useState } from 'react'
import { Button } from '@/components/ui/button'
import { Input } from '@/components/ui/input'

const SPEECH_PATH = '/api/audio/speech'

export default function AudioPage() {
  const [ttsText, setTtsText] = useState('')
  const [playing, setPlaying] = useState(false)

  async function speak() {
    if (!ttsText.trim()) return
    setPlaying(true)
    try {
      const res = await fetch(SPEECH_PATH, {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({ text: ttsText }),
      })
      const arrayBuffer = await res.arrayBuffer()
      const audioCtx = new AudioContext()
      const audioBuffer = await audioCtx.decodeAudioData(arrayBuffer)
      const source = audioCtx.createBufferSource()
      source.buffer = audioBuffer
      source.connect(audioCtx.destination)
      source.onended = () => setPlaying(false)
      source.start()
    } catch {
      setPlaying(false)
    }
  }

  return (
    <div className="max-w-lg mx-auto p-8 flex flex-col gap-8">
      <h1 className="text-2xl font-semibold">Audio</h1>

      {/* Text-to-speech */}
      <section className="flex flex-col gap-3">
        <h2 className="text-lg font-medium">Text → Speech</h2>
        <div className="flex gap-2">
          <Input
            value={ttsText}
            onChange={(e) => setTtsText(e.target.value)}
            placeholder="Enter text to speak..."
            onKeyDown={(e) => { if (e.key === 'Enter') void speak() }}
          />
          <Button onClick={() => void speak()} disabled={playing || !ttsText.trim()}>
            {playing ? 'Playing…' : 'Speak'}
          </Button>
        </div>
      </section>
    </div>
  )
}
"
`;

exports[`generateAudioPage > snapshot — transcribe only 1`] = `
"'use client'

// Generated by ai-wingman — edit freely, you own this file.
// Transcribe: record audio → send base64 to /api/audio/transcribe → display text
// Speech:     type text → send to /api/audio/speech → play the returned audio

import { useRef, useState } from 'react'
import { Button } from '@/components/ui/button'
import { Input } from '@/components/ui/input'

const TRANSCRIBE_PATH = '/api/audio/transcribe'

export default function AudioPage() {
  const [transcript, setTranscript] = useState('')
  const [recording, setRecording] = useState(false)
  const mediaRef = useRef<MediaRecorder | null>(null)
  const chunksRef = useRef<BlobPart[]>([])

  async function startRecording() {
    const stream = await navigator.mediaDevices.getUserMedia({ audio: true })
    const recorder = new MediaRecorder(stream)
    chunksRef.current = []
    recorder.ondataavailable = (e) => chunksRef.current.push(e.data)
    recorder.onstop = async () => {
      const blob = new Blob(chunksRef.current, { type: 'audio/webm' })
      const base64 = await blobToBase64(blob)
      const res = await fetch(TRANSCRIBE_PATH, {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({ audio: base64, mimeType: 'audio/webm' }),
      })
      const data = await res.json() as { text: string }
      setTranscript(data.text)
      stream.getTracks().forEach((t) => t.stop())
    }
    recorder.start()
    mediaRef.current = recorder
    setRecording(true)
  }

  function stopRecording() {
    mediaRef.current?.stop()
    setRecording(false)
  }

  function blobToBase64(blob: Blob): Promise<string> {
    return new Promise((resolve, reject) => {
      const reader = new FileReader()
      reader.onload = () => {
        const dataUrl = reader.result as string
        // strip the data:...;base64, prefix
        resolve(dataUrl.split(',')[1] ?? '')
      }
      reader.onerror = reject
      reader.readAsDataURL(blob)
    })
  }

  return (
    <div className="max-w-lg mx-auto p-8 flex flex-col gap-8">
      <h1 className="text-2xl font-semibold">Audio</h1>

      {/* Transcription */}
      <section className="flex flex-col gap-3">
        <h2 className="text-lg font-medium">Speech → Text</h2>
        <Button
          onClick={recording ? stopRecording : startRecording}
          variant={recording ? 'destructive' : 'default'}
        >
          {recording ? 'Stop recording' : 'Start recording'}
        </Button>
        {transcript && (
          <p className="rounded border p-3 text-sm whitespace-pre-wrap">{transcript}</p>
        )}
      </section>
    </div>
  )
}
"
`;

exports[`generateAudioSpeechRoute > snapshot — no auth 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// Text-to-speech: accepts text and streams back an audio file.
// Provider must support speech generation (e.g. OpenAI TTS via @ai-sdk/openai).
//
// Client sends: { text: "Hello world" }
// Response:     audio/mpeg stream

import { experimental_generateSpeech as generateSpeech } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'

export const maxDuration = 30

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { text } = await req.json() as { text: string }

  try {
    const result = await generateSpeech({
      // TODO: swap for your provider's speech model, e.g. openai.speech('tts-1')
      model: (anthropic as any).speech?.('tts-1') ?? anthropic('claude-opus-4-5') as any,
      text,
      voice: 'alloy', // TODO: choose a voice
    })

    return new Response(result.audio.uint8Array as unknown as BodyInit, { headers: { 'Content-Type': 'audio/mpeg' } })
  } catch {
    return Response.json({ error: 'Speech generation failed' }, { status: 500 })
  }
}
"
`;

exports[`generateAudioTranscribeRoute > snapshot — no auth 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// Speech-to-text: accepts a base64-encoded audio file and returns the transcript.
// Provider must support transcription (e.g. OpenAI Whisper via @ai-sdk/openai).
//
// Client sends: { audio: "<base64>", mimeType: "audio/webm" }
// Response:     { text: "transcribed content..." }

import { experimental_transcribe as transcribe } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'

export const maxDuration = 30

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { audio, mimeType = 'audio/webm' } = await req.json() as { audio: string; mimeType?: string }

  try {
    // Decode the base64 audio sent by the client
    const audioBuffer = Buffer.from(audio, 'base64')

    const result = await transcribe({
      // TODO: swap for your provider's transcription model, e.g. openai.transcription('whisper-1')
      model: (anthropic as any).transcription?.('whisper-1') ?? anthropic('claude-opus-4-5') as any,
      audio: audioBuffer,
    })

    return Response.json({ text: result.text })
  } catch {
    return Response.json({ error: 'Transcription failed' }, { status: 500 })
  }
}
"
`;
